Show execution course information in groups view.